--- a/internal/mailer/templates/welcome.tmpl
+++ b/internal/mailer/templates/welcome.tmpl
@@ -5,6 +5,11 @@ Hi,
 
 Thanks for coming nigglet. Your id is {{.ID}}
 
+Send a `PUT` request to `/v1/users/activated` endpoint with the following JSON:
+{"token": "{{.activationToken}}"}
+
+Do note this is a one time token which will expire in 3 days.
+
 Thanks,
 
 Niggas who don't give an f
@@ -22,6 +27,11 @@ Niggas who don't give an f
         <p>Hi,</p>
         <p>Thanks for coming nigglet. Your id is {{.ID}}</p>
         <p>Thanks,</p>
+        <p>Send a `PUT` request to `/v1/users/activated` endpoint with the following JSON:<br>
+        <pre><code>{"token": "{{.activationToken}}"}</code></pre><br>
+
+        Do note this is a one time token which will expire in 3 days.</p>
+
         <p>Niggas who don't give an f</p>
     </body>
 </html>
