--- a/internal/mailer/templates/welcome.tmpl
+++ b/internal/mailer/templates/welcome.tmpl
@@ -25,14 +25,14 @@ Niggas who don't give an f
     </head>
     <body>
         <p>Hi,</p>
-        <p>Thanks for coming nigglet. Your id is {{.ID}}</p>
-        <p>Thanks,</p>
+        <p>Thanks for signing up to this useless API. Your id is {{.userID}}</p>
         <p>Send a `PUT` request to `/v1/users/activated` endpoint with the following JSON:<br>
         <pre><code>{"token": "{{.activationToken}}"}</code></pre><br>
 
         Do note this is a one time token which will expire in 3 days.</p>
 
-        <p>Niggas who don't give an f</p>
+        <p>Yours truly,</p>
+        <p>Niggers.</p>
     </body>
 </html>
 {{end}}
