updating template again due to ocd

--- a/internal/mailer/templates/welcome.tmpl
+++ b/internal/mailer/templates/welcome.tmpl
@@ -25,8 +25,8 @@ Niggas who don't give an f
     </head>
     <body>
         <p>Hi,</p>
-        <p>Thanks for signing up to this useless API. Your id is {{.userID}}</p>
-        <p>Send a `PUT` request to `/v1/users/activated` endpoint with the following JSON:<br>
+        <p>So you really signed up to this useless API? Anyways, Your id is {{.userID}}.</p><br>
+        <p>You also have to send a `PUT` request to `/v1/users/activated` endpoint with the following JSON:<br>
         <pre><code>{"token": "{{.activationToken}}"}</code></pre><br>
 
         Do note this is a one time token which will expire in 3 days.</p>
