updated again cause I suck at html

--- a/internal/mailer/templates/welcome.tmpl
+++ b/internal/mailer/templates/welcome.tmpl
@@ -25,7 +25,8 @@ Niggas who don't give an f
     </head>
     <body>
         <p>Hi,</p>
-        <p>So you really signed up to this useless API? Anyways, Your id is {{.userID}}.</p><br>
+        <p>So you really signed up to this useless API?</p>
+        <p>Anyways, Your id is {{.userID}}.</p>
         <p>You also have to send a `PUT` request to `/v1/users/activated` endpoint with the following JSON:<br>
         <pre><code>{"token": "{{.activationToken}}"}</code></pre><br>
 
